# CSV_co_old

./: .gitignore  CMakeLists.txt  README.md  TODO
benchmark/: CMakeLists.txt  game.csv  lazybench.cpp  spanbench.cpp
example/: CMakeLists.txt  CSV_To_RAM.cpp  csv_2_Ram.cpp  csv_2_matrix.cpp  csv_sum.cpp  file2matrix.cpp
include/: config.h.in
include/csv_co/: mmap.hpp  reader.hpp  short_alloc.h
test/: CMakeLists.txt  game-invalid-format.csv  game.csv  main.cpp
